# optimusOS

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CHANGES_6.2.1.md  CHANGES_7.0.1.md  CLAUDE.md  Dockerfile  INTEGRATION.md  MANIFEST.in  PLANS.md  README.md  README_FIRST_WINDOWS.txt  SECURITY.md  UPGRADE_FROM_7.0.0.md  docker-compose.yml  local.bat  pyproject.toml  pyrightconfig.json  start-optimus-ubuntu.sh
.claude/agents/: optimus-explorer.md  optimus-implementer.md  optimus-planner.md  optimus-release-auditor.md  optimus-reviewer.md  optimus-security-reviewer.md
.codex/: config.toml
.github/workflows/: ai-coordination.yml  ci.yml
alembic/: env.py
alembic/versions/: 001_optimus_os_foundation.py  002_authentication_tables.py  003_context_entries.py  004_customers.py  005_vehicles.py  006_estimate_approvals.py  007_work_orders.py  008_invoices.py  009_payments.py  010_notifications_square.py  011_multi_role_auth.py  012_technicians.py  013_vendors_parts.py  014_intake_requests.py  015_diagnostics_inspections.py  016_scheduling.py  017_synthetic_test_accounts.py  032_support_role.py  (+22 more)
app/: AGENTS.md  account_security_store.py  auth.py  bootstrap_owner.py  bootstrap_support.py  capability_gate.py  capability_metrics.py  capability_store.py  config.py  context_store.py  control.py  customer_history_store.py  customer_store.py  dashboard_store.py  db.py  db_models.py  diagnostics_store.py  email_verification_store.py  errors.py  estimate_store.py  inspection_store.py  intake_store.py  invoice_store.py  job_compiler.py  job_proposal.py  job_release.py  main.py  migration_compat.py  mode_transition_store.py  models.py  net.py  notification_store.py  observability.py  operations_monitor.py  orchestrator.py  part_allocation_store.py  part_store.py  payment_store.py  purchase_order_store.py  rate_limit.py  (+19 more)
docs/: RELEASE_NOTES.md  UBUNTU_DEPLOYMENT_REPORT.md  UI_CONNECTION_AUDIT.md  frontend-audit.md  ui-control-matrix.md
integration/: optimus_adapter.py
ops/: docker-compose.staging.yml
optimus_internet_local_parts.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
scripts/: ai_context_snapshot.sh  check_ai_handoff.py  check_config.py  check_shop_id_orphans.py  install_systemd_service.sh  open_when_ready.ps1  optimus_worker.py  optimusctl.sh  regression_backtest.py  reset_openai_key.ps1  scan_logs_for_secrets.py  seed_estimate_approval_fixture.py  ui_connection_audit_playwright.js  validate_runtime.py  windows_setup.ps1
tests/: conftest.py  test_account_security_api.py  test_api.py  test_auth.py  test_background_job_tenant_safety.py  test_bays_capability_observe.py  test_capabilities_api.py  test_capability_gate.py  test_capability_gate_safeguards.py  test_capability_metrics.py  test_chat_service.py  test_config_precedence.py  test_context_api.py  test_context_deps.py  test_control.py  test_customer_history_api.py  test_customers_api.py  test_dashboard_api.py  test_diagnostics_and_inspections_api.py  test_document_exposure_scan.py  test_email_verification_api.py  test_estimate_approval_api.py  test_estimator.py  test_idempotency_audit.py  test_intake_bridge_api.py  test_invoices_api.py  test_isolation_sweep.py  test_job_compiler_api.py  test_job_proposals_api.py  test_job_release_api.py  test_json_parser.py  test_membership_tenant_boundary.py  test_migration_compat.py  test_notifications_api.py  test_observability.py  test_official_ui.py  test_openai_research.py  test_operating_mode_management_api.py  test_operating_mode_onboarding_api.py  test_operations_monitor.py  (+38 more)
(+99 files in other folders)
