[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "optimus-internet-local-parts"
version = "7.1.0"
description = "Landon Motor Works Optimus command center with owner-controlled chat, web research, local parts lookup, labor analysis, and estimates"
requires-python = ">=3.12,<3.14"
dependencies = [
  "fastapi>=0.115,<1",
  "uvicorn[standard]>=0.30,<1",
  "openai>=1.100,<3",
  "httpx>=0.27,<1",
  "argon2-cffi>=23.1,<26",
  "pydantic>=2.8,<3",
  "pydantic-settings>=2.4,<3",
  "python-dotenv>=1.0,<2",
  "alembic>=1.13,<2",
  "psycopg[binary]>=3.2,<4",
  "sqlalchemy>=2.0.51",
  "redis>=5.0,<6",
]

[project.optional-dependencies]
dev = [
  "pytest>=8,<10",
  "pytest-asyncio>=0.24,<2",
  "ruff>=0.8,<1",
  "mypy>=1.11,<2",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
asyncio_mode = "auto"
norecursedirs = [
  "dist",
  "build",
  "node_modules",
  ".venv",
  ".pytest_cache",
  ".ruff_cache",
  ".mypy_cache",
  "*.egg-info",
  # Real-browser, real-server E2E tests: excluded from the default fast
  # unit-test run (in-memory SQLite, no live server) and run separately
  # against a real Postgres + Redis + live app instance -- see
  # tests/e2e/README.md and the dedicated CI job.
  "tests/e2e",
]

[tool.ruff]
target-version = "py312"
line-length = 100
extend-exclude = [
  "dist",
  "build",
  "node_modules",
  ".venv",
  ".pytest_cache",
  ".ruff_cache",
  ".mypy_cache",
  "optimus_internet_local_parts.egg-info",
]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM", "RUF"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.12"
strict = true
plugins = ["pydantic.mypy"]

[tool.setuptools.packages.find]
include = ["app*", "integration*", "scripts*"]

[tool.setuptools.package-data]
app = ["static/*", "static/vendor/*", "static/media/*"]

[dependency-groups]
dev = [
    "pyright>=1.1.411",
    "pytest>=9.1.1",
    "pytest-asyncio>=1.4.0",
    "pytest-cov>=7.1.0",
    "pytest-playwright>=0.8.0",
    "ruff>=0.15.20",
]
